fix(dataset): preserve null query cells